--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "No Sql Api - testing routes with Insomnia",
   "main": "server.js",
   "dependencies": {
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "mongoose": "^7.5.2"
   },
